about section added

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
            </div>
         </nav>
         <!-- Banner  -->
-         <section class="container px-4 my-4 flex justify-center">
+         <section class="container px-4 my-4 mb-8 flex justify-center">
                 <div class="text-center  space-y-4">
                     <img src="assets/banner.png" class="mx-auto" alt="">
                     <h1 class="text-2xl font-black lg:text-5xl">A barn house of this design has a <br> striking appearance</h1>
@@ -66,7 +66,68 @@
          </section>
      </header>
      <!-- main part -->
-      <main></main>
+      <main>
+        <!-- About part -->
+         <section class="bg-[#F4F4F4] my-12 px-4">
+             <div class="container py-12 px-4">
+                 <div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
+                       <div class="p-4">
+                        <div class="space-y-5">
+                            <img src="assets/Vector.png" class="relative hidden lg:block right-8" alt="">
+                        <p class="bg-white   rounded-xl px-4 py-2 space-x-3 inline-block"><i class="fa-solid mr-2 fa-arrow-right"></i> About Us</p>
+                        <h1 class="text-2xl font-black lg:text-5xl">We design thoughtful, <br> liveable spaces</h1>
+                        <p class="text-[#494949]">The barn house captivates with its blend of rustic charm and <br>
+                            modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                        </div>
+                         <div class="flex gap-x-2 mt-4 py-4 rounded-md p-2 lg:p-4 bg-white shadow-lg">
+                            <img src="assets/commercial.png" alt="">
+                            <div class="px-4">
+                                <h1 class="lg:text-xl font-bold">Commercial</h1>
+                                <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                            </div>
+                         </div>
+                         <div class="flex gap-x-2 rounded-md p-2 py-4  lg:p-4 bg-white shadow-lg mt-4">
+                            <img src="assets/residential.png" alt="">
+                            <div class="px-4">
+                                <h1 class="lg:text-xl font-bold">Residential</h1>
+                                <p>The barn house captivates with its blend of rustic charm and modern.</p>
+                            </div>
+                         </div>
+                       </div>
+                       <div class="p-4">
+                        <img src="assets/Rectangle.png" alt="">
+                       </div>
+                </div>
+
+                <!-- Counting part  -->
+                 <div class="bg-white mt-12 py-8 rounded-md shadow-lg grid grid-cols-1 gap-4 lg:grid-cols-4 md:grid-cols-2 ">
+                  <div class="text-center space-y-2">
+                     <img src="assets/1.svg" class="mx-auto" alt="">
+                     <h1 class="font-bold text-xl">235+</h1>
+                     <p class="text-sm text-[#737373]">Happy Client Review</p>
+                  </div>
+                  <div class="text-center space-y-2">
+                    <img src="assets/2.svg" class="mx-auto" alt="">
+                    <h1 class="font-bold text-xl">50+</h1>
+                    <p class="text-sm text-[#737373]">Work Departments</p>
+                 </div>
+                 <div class="text-center space-y-2">
+                    <img src="assets/3.svg" class="mx-auto" alt="">
+                    <h1 class="font-bold text-xl">30k+</h1>
+                    <p class="text-sm text-[#737373]">Our Happy Client</p>
+                 </div>
+                 <div class="text-center space-y-2">
+                    <img src="assets/4.svg" class="mx-auto" alt="">
+                    <h1 class="font-bold text-xl">307+</h1>
+                    <p class="text-sm text-[#737373]">Staff Members</p>
+                 </div>
+                 </div>
+                 <!-- Our Works Process -->
+                  
+             </div>
+
+         </section>
+      </main>
       <!-- footer  -->
        <footer>
 
