Our Latest Portfolio Section Added

--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
                         <img src="assets/Rectangle.png" alt="">
                        </div>
                 </div>
-
-                <!-- Counting part  -->
+                 <!-- Counting part  -->
                  <div class="bg-white mt-12 py-8 rounded-md shadow-lg grid grid-cols-1 gap-4 lg:grid-cols-4 md:grid-cols-2 ">
                   <div class="text-center space-y-2">
                      <img src="assets/1.svg" class="mx-auto" alt="">
@@ -123,10 +122,93 @@
                  </div>
                  </div>
                  <!-- Our Works Process -->
-                  
+                  <div class="mt-10 mb-12 px-4">
+                    <div class="text-center space-y-5">
+                        <p class="bg-white   rounded-xl px-4 py-2 space-x-3 inline-block"><i class="fa-solid mr-2 fa-arrow-right"></i> How we works</p>
+                        <h1 class="text-2xl font-bold lg:text-4xl ">Our Works Process</h1>
+                        <p class="text-sm text-[#777]">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+                    </div>
+                    <!-- card -->
+                     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mt-20">
+                        <div class="bg-[#E7C1D3] p-4 space-y-2 rounded-md">
+                            <img src="assets/concept.png" alt="">
+                            <h1 class="font-bold">Concept</h1>
+                            <p class="text-sm">The barn house captivates with its blend of rustic charm and modern.</p>
+                         </div>
+                        <div class="bg-[#EFDA6E] p-4 space-y-2 rounded-md">
+                            <img src="assets/flow-chart.png" alt="">
+                            <h1 class="font-bold">Design Process</h1>
+                            <p class="text-sm">The barn house captivates with its blend of rustic charm and modern.</p>
+                        </div>
+                        <div class="bg-[#A4DAC3] p-4 space-y-2 rounded-md">
+                            <img src="assets/vision.png" alt="">
+                            <h1 class="font-bold">Supervision</h1>
+                            <p class="text-sm">The barn house captivates with its blend of rustic charm and modern.</p>
+                        </div>
+                        <div class="bg-[#77AAEA] p-4 space-y-2 rounded-md">
+                            <img src="assets/budget-planning.png" alt="">
+                            <h1 class="font-bold">Budget Planning</h1>
+                            <p class="text-sm">The barn house captivates with its blend of rustic charm and modern.</p>
+                        </div>
+                     </div>
+                  </div>
+
              </div>
 
          </section>
+
+         <!-- Our Latest Portfolio -->
+          <section class="my-12">
+            <div class="container px-4">
+                <div class="text-center space-y-3">
+                    <p class="bg-[#EEFCDF]   rounded-xl px-4 py-2 space-x-3 inline-block"><i class="fa-solid mr-2 fa-arrow-right"></i> Explore our Latest works</p>
+                    <h1 class="text-2xl font-black lg:text-5xl">Our Latest Portfolio</h1>
+                    <p class="text-[#494949]">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+                </div>
+                 <!-- img card -->
+                 <div class="grid grid-cols-1 my-8 lg:grid-cols-3 gap-5">
+                     <div class="lg:col-span-2 rounded-md border lg:flex space-y-3  gap-x-3   p-4">
+                        <div class=" lg:inline-block w-[400px]  ">
+                            <img src="assets/img1.png" class=" lg:h-auto object-cover  w-full h-full mx-auto"  alt="">
+                        </div>
+                        <div class="space-y-3">
+                            <h1 class="font-bold text-xl ">Commercial</h1>
+                            <p class="pr-4">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                            <div class="flex items-center gap-x-2">
+                                <p class="font-bold">View Details</p>
+                                <button class="btns text-black  w-[40px] h-[30px ] p-2 rounded-full"><i class="fa-solid -rotate-45 fa-arrow-right-long"></i></button>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="border rounded-md lg:inline-block p-4">
+                        <img src="assets/img2.png" class="w-full h-[200px]"  alt="">
+                     </div>
+                </div>
+                <!-- img card -->
+                <div class="grid grid-cols-1 my-8 lg:grid-cols-4 gap-5">
+                    
+                    <div class="border rounded-md lg:inline-block p-4">
+                       <img src="assets/img3.png" class="w-full h-[200px]"  alt="">
+                    </div>
+                    <div class="lg:col-span-2 rounded-md border lg:flex space-y-3  gap-x-3   p-4">
+                        <div class=" lg:inline-block lg:w-[600px]      ">
+                            <img src="assets/img4.png" class="w-full lg:h-[200px]   "  alt="">
+                        </div>
+                        <div class="space-y-3">
+                            <h1 class="font-bold text-xl ">Commercial</h1>
+                            <p class="pr-4">The barn house captivates with its blend of rustic charm and modern. The barn house captivates with its blend of rustic charm and modern .</p>
+                            <div class="flex items-center gap-x-2">
+                                <p class="font-bold">View Details</p>
+                                <button class="btns text-black  w-[40px] h-[30px ] p-2 rounded-full"><i class="fa-solid -rotate-45 fa-arrow-right-long"></i></button>
+                            </div>
+                        </div>
+                     </div>
+                     <div class="border rounded-md lg:inline-block p-4">
+                        <img src="assets/img5.png" class="w-full h-[200px]"  alt="">
+                     </div>
+               </div>
+             </div>
+          </section>
       </main>
       <!-- footer  -->
        <footer>
