Read Our Articles and News Section Added

--- a/index.html
+++ b/index.html
@@ -209,6 +209,70 @@
                </div>
              </div>
           </section>
+          <!-- Read Our Articles and News -->
+           <section class="bg-[#F4F4F4] my-20 px-4 py-12">
+                <div class="container">
+                    <div class="text-center space-y-3 ">
+                        <p class="bg-[#EEFCDF]   rounded-xl px-4 py-2 space-x-3 inline-block"><i class="fa-solid mr-2 fa-arrow-right"></i> Rinterio News</p>
+                        <h1 class="text-2xl font-black lg:text-5xl">Read Our Articles and News</h1>
+                        <p class="text-sm">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+                    </div>
+                    <!-- card -->
+                     <div class="my-12 px-4 grid grid-cols-1 lg:grid-cols-3 gap-6">
+                        <div class="bg-white shadow-lg p-4 space-y-3  rounded-md ">
+                            <img src="assets/article1.png" class="mx-auto" alt="">
+                            <div class="flex gap-x-2 text-[#737373] px-4 items-center">
+                                <i class="fa-regular fa-calendar-days"></i>
+                                <p>July14, 2024</p>
+                                <i class="fa-regular fa-circle-user"></i>
+                                <p>By Admin</p>
+                            </div>
+                            <div class="px-4 space-y-2">
+                                <h1 class="text-[#494949] font-bold text-xl">How to choose the furniture right  of your home.</h1>
+                                <p class="text-[#737373]">The barn house captivates with its blend of rustic charm and modern. </p>
+                                <div class="flex items-center gap-x-3">
+                                    <p>Read More</p>
+                                    <button class="btns text-black  w-[40px] h-[30px ] p-2 rounded-full"><i class="fa-solid -rotate-45 fa-arrow-right-long"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bg-white shadow-lg p-4 space-y-3  rounded-md">
+                            <img src="assets/article2.png" class="mx-auto" alt="">
+                            <div class="flex gap-x-2 text-[#737373] px-4 items-center">
+                                <i class="fa-regular fa-calendar-days"></i>
+                                <p>July14, 2024</p>
+                                <i class="fa-regular fa-circle-user"></i>
+                                <p>By Admin</p>
+                            </div>
+                            <div class="px-4 space-y-2">
+                                <h1 class="text-[#494949] font-bold text-xl">How to choose the furniture right  of your home.</h1>
+                                <p class="text-[#737373]">The barn house captivates with its blend of rustic charm and modern. </p>
+                                <div class="flex items-center gap-x-3">
+                                    <p>Read More</p>
+                                    <button class="btns text-black  w-[40px] h-[30px ] p-2 rounded-full"><i class="fa-solid -rotate-45 fa-arrow-right-long"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="bg-white shadow-lg p-4 space-y-3  rounded-md">
+                            <img src="assets/article3.png" class="mx-auto" alt="">
+                            <div class="flex gap-x-2 text-[#737373] px-4 items-center">
+                                <i class="fa-regular fa-calendar-days"></i>
+                                <p>July14, 2024</p>
+                                <i class="fa-regular fa-circle-user"></i>
+                                <p>By Admin</p>
+                            </div>
+                            <div class="px-4 space-y-2">
+                                <h1 class="text-[#494949] font-bold text-xl">How to choose the furniture right  of your home.</h1>
+                                <p class="text-[#737373]">The barn house captivates with its blend of rustic charm and modern. </p>
+                                <div class="flex items-center gap-x-3">
+                                    <p>Read More</p>
+                                    <button class="btns text-black  w-[40px] h-[30px ] p-2 rounded-full"><i class="fa-solid -rotate-45 fa-arrow-right-long"></i></button>
+                                </div>
+                            </div>
+                        </div>
+                     </div>
+                </div>
+           </section>
       </main>
       <!-- footer  -->
        <footer>
