Footer section Added And End Projects

--- a/index.html
+++ b/index.html
@@ -312,8 +312,28 @@
             </section>
       </main>
       <!-- footer  -->
-       <footer>
-
+       <footer class="bg-black py-12 mt-2 text-white">
+              <div class="container">
+                <nav class="container py-4 px-4 flex flex-col gap-y-5 items-center justify-between ">
+                    <div class="flex items-center gap-x-2">
+                      <button class="btns text-black  w-[40px] h-[30px ] p-2 rounded-full"><i class="fa-solid -rotate-45 fa-arrow-right-long"></i></button>
+                      <h1 class="text-xl font-bold md:text-3xl">Rinterio</h1>
+                      
+                    </div>
+                    <p class="text-center">The barn house captivates with its blend of rustic charm and modern sophistication, <br> featuring weathered wood, sleek metal accents.</p>
+                    <ul class="flex lg:flex-row flex-col gap-y-4  lg:gap-x-20">
+                     <li class="font-bold">Home</li>
+                     <li>Services</li>
+                     <li>Portfolio</li>
+                     <li>Blogs</li>
+                     <li>Contact Us</li>
+                    </ul>
+                    <div class="  md:flex gap-x-3">
+                      <button class="btns font-semibold space-x-3 p-3 text-black rounded-2xl">Book Consult <span class=" w-[60px] h-[30px ] px-2 py-1  bg-black   text-white rounded-full"><i class="fa-solid -rotate-45 fa-arrow-right-long"></i></span></button>
+                    </div>
+                    
+                 </nav>
+              </div>
        </footer>
 </body>
 </html>
